--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
-target/
-**/*.rs.bk
+bin/
+build/
+/src/test/resources/test-output
+target/*
+data/*
+.idea/*
+.gradle/*
+src/gen/*
+*.pyc
+out/
+
+*.class
+
+# Package Files #
+
+hs_err_pid*
+/dist/
+/eclipse-build/
+
+#Idea files
+*.iml
+*.ipr
+/gradlew.bat
+*.iws
+/awsutils.log
+/.gradle/
+
+.cache-*
+.classpath
+.project
+.settings/*
